packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_with_components__with_governor_counting_simple.snap
---
source: src/tests/test_with_components.rs
expression: result
snapshot_kind: text
---
TokenStream:

#[starknet::contract]
pub mod MyContract {
    #[storage]
    pub struct Storage {
        #[substorage(v0)]
        governor_counting_simple: GovernorCountingSimpleComponent::Storage,
    }
    use openzeppelin_governance::governor::extensions::GovernorCountingSimpleComponent;

    component!(
        path: GovernorCountingSimpleComponent,
        storage: governor_counting_simple,
        event: GovernorCountingSimpleEvent,
    );

    impl GovernorCountingSimpleGovernorCounting =
        GovernorCountingSimpleComponent::GovernorCounting<ContractState>;

    #[event]
    #[derive(Drop, starknet::Event)]
    enum Event {
        #[flat]
        GovernorCountingSimpleEvent: GovernorCountingSimpleComponent::Event,
    }
}


Diagnostics:

None

AuxData:

None
